<resources>
    <string name="app_name">PesquisaCarro</string>
    
    <string name="action_settings">Settings</string>
    <string name="Login">Efetue seu login</string>
    <string name="email">E-mail</string>
    <string name="pass">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="title_activity_listagem">Listagem</string>
    <string name="controle">Controle de Frotas de Veículos</string>
    <string name="sair">Logout</string>
    <string name="sobre">Sobre</string>
    <string name="sobreconteudo">Pesquisa Detran/RN 1.0</string>
    <string name="user">Fulado de Tal</string>
    <string name="veiculos">Veículos Cadastrados:</string>
    <string name="adicionar">Adicionar</string>
    <string name="consultar">Consultar</string>
    <string name="cadastrando">Cadastrar</string>
    <string name="nusuario">Novo Usuário</string>
    <string name="cadastrarprimeiro">Cadastre-se Primeiro</string>
    <string name="usuariosenhaerrado">Usuário/Senha errados</string>
    <string name="cadastradosucesso">Cadastrado com Sucesso</string>
    <string name="emailinvalido">Email Inválido</string>
    <string name="placa">Placa</string>
    <string name="renavam">Renavam</string>
    <string name="nveiculo">Novo Veículo</string>
    <string name="ncheck">N/A</string>
    <string name="okcheck">OK</string>
    <string name="nokcheck">X</string>
    <string name="apagarveiculo">Apagar Placa: </string>
    <string name="apagarmessagem">Deseja apagar esse veículo?</string>
    <string name="removeuser">TODOS os dados serão apagados. Deseja realmente sair?</string>
    <string name="status">Status</string>
    <string name="errorcomunicacao">Ocorreu uma falha de comunicação com o servidor, tente mais tarde.</string>
    <string name="atualizado">Veículos verificados com sucesso!</string>
    <string name="atualizando">Verificando...</string>

    <string name="hello_world">Hello world!</string>
</resources>
