<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.marcelo.pesquisacarro.Listagem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/controle"
            android:id="@+id/textView"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/placa"/>
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/renavam"/>
            <TextView
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/status"/>

        </LinearLayout>

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:verticalScrollbarPosition="right"
            android:scrollbars="vertical"
            android:id="@+id/gridView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:onClick="adicionar"
                android:text="@string/adicionar"
                android:id="@+id/adicionar" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="consultar"
                android:text="@string/consultar"
                android:id="@+id/consultar" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
