<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/placaCad"
        android:layout_marginTop="30dp"
        android:hint="@string/placa" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/renavamCad"
        android:layout_marginTop="30dp"
        android:hint="@string/renavam"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrando"
            android:id="@+id/veiculoBT" />

    </LinearLayout>

</LinearLayout>
