<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailCad"
        android:layout_marginTop="30dp"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senhaCad"
        android:layout_marginTop="30dp"
        android:hint="@string/pass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrando"
            android:id="@+id/cadastrar" />

    </LinearLayout>

</LinearLayout>
