<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Login"
            android:id="@+id/textView"
            android:textColor="#ff002dff"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailET"
            android:layout_marginTop="70dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/senhaET"
            android:layout_marginTop="30dp"
            android:hint="@string/pass"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="logar"
                android:text="@string/entrar"
                android:id="@+id/logar" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
